cmake_minimum_required(VERSION 3.10)
project(osureloaded)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIRS})
add_executable(osureloaded main.cpp)
target_link_libraries(osureloaded ${SDL2_LIBRARIES} SDL2_image)

# DEB build
if (UNIX)
set(CPACK_DEBIAN_PACKAGE_NAME "osureloaded")
set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Unofficial rewrited osu! client built on C++ and SDL2")
set(CPACK_DEBIAN_PACKAGE_DEPENDS "libsdl2-dev, libsdl2-image-dev")
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_PACKAGE_CONTACT "radekw8733@gmail.com")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Radoslaw Wolanski")
set(CPACK_PACKAGE_ARCHITECTURE "amd64")
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "1")
set(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "bin" COMPONENT applications)
install(DIRECTORY ${CMAKE_SOURCE_DIR}/res DESTINATION "share/osureloaded")
install(FILES ${CMAKE_SOURCE_DIR}/osureloaded.desktop DESTINATION share/applications)
endif (UNIX)

include(CPack)
