[package]
name = "osuplusplus"
version = "0.1.0"
edition = "2021"
authors = ["Radosław Wolański <radekw8733@gmail.com>"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.1", features = ["wayland", "jpeg"] }
bevy_dylib = "0.10.1"
rand = "*"