[package]
name = "osuplusplus"
version = "0.1.1"
edition = "2021"
authors = ["Radosław Wolański <radekw8733@gmail.com>"]

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
rand = "*"
utf8-read= "0.4.0"
zip = { version = "0.6.6", features = ["bzip2", "zstd"] }
glob = "0.3.1"
bevy_tweening = "0.7.0"
lyon_geom = "1.0.4"

[dependencies.bevy]
version = "0.10.1"
default-features = false
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "filesystem_watcher",
    "x11",
    "wayland",
    "png",
    "jpeg"
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_dylib = "0.10.1"